Fix screen height on small devices

--- a/src/map.css
+++ b/src/map.css
@@ -3,7 +3,7 @@
     margin-left: -1rem;
     margin-right: -1rem;
     margin-bottom: -1rem;
-    width: 80vh;
+    height: 80vh;
 }
 
 .leaflet-shadow-pane img, .leaflet-marker-pane img {
